# renoster

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FindOpenImageIO.cmake  plugins.cmake
include/renoster/: bounds.h  bsdf.h  bvh.h  camera.h  color.h  display.h  export.h  film.h  filmaccumulator.h  filtertable.h  frame.h  geometry.h  integrator.h  light.h  linearbounds.h  log.h  material.h  mathutil.h  matrix.h  microfacet.h  normal.h  paramlist.h  pixelfilter.h  plugin.h  point.h  position.h  primitive.h  ray.h  reflection.h  renderer.h  reno.h  renoparser.h  rng.h  sampler.h  sampling.h  scene.h  shading.h  transform.h  types.h  vector.h
include/renoster/accel/: binning.h  builder.h  splitter.h
include/renoster/util/: allocator.h  span.h  strutil.h  tagged_pointer.h  vbool4.h  vfloat4.h
scenes/: cornell.reno  spheres.reno
src/librenoster/: CMakeLists.txt  bsdf.cpp  bvh.cpp  camera.cpp  film.cpp  filmaccumulator.cpp  filtertable.cpp  geometry.cpp  microfacet.cpp  paramlist.cpp  plugin.cpp  primitive.cpp  renderer.cpp  reno.cpp  renoparser.cpp  sampling.cpp  scene.cpp  shading.cpp  transform.cpp
src/librenoster/io/: renolex.l  renoparse.y  renoreader.h
src/librenoster/util/: filesystem.cpp  filesystem.h  paramtable.h
src/main/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/cameras/: CMakeLists.txt  pinhole.cpp
src/plugins/displays/: CMakeLists.txt  image.cpp
src/plugins/geometry/: CMakeLists.txt  sphere.cpp  trianglemesh.cpp
src/plugins/integrators/: CMakeLists.txt  direct.cpp  normal.cpp  occlusion.cpp  path.cpp
src/plugins/lights/: CMakeLists.txt  diffuse.cpp
src/plugins/materials/: CMakeLists.txt  diffuse.cpp
src/plugins/pixelfilters/: CMakeLists.txt  box.cpp
src/plugins/samplers/: CMakeLists.txt  independent.cpp
src/tools/: CMakeLists.txt  obj2reno.cpp
test/: CMakeLists.txt  bounds.cpp  frame.cpp
